feat: Criação de endpoint de listagem de OS + lógica de release de estoque + validações para edição sem itens