@@ -1,8 +1,13 @@
 package br.com.ofisy.adapters.gateways.quote;
 
 import br.com.ofisy.domain.quote.Quote;
+import br.com.ofisy.domain.quote.QuoteServiceItem;
 import br.com.ofisy.domain.quote.QuoteStatus;
+import br.com.ofisy.domain.quote.QuoteStockItem;
+import br.com.ofisy.domain.serviceorderexecution.ServiceOrderExecution;
 import br.com.ofisy.domain.serviceorderexecution.ServiceOrderExecutionRepository;
+import br.com.ofisy.domain.serviceorderexecution.ServiceOrderExecutionStatus;
+import br.com.ofisy.domain.stock.Stock;
 import br.com.ofisy.domain.stock.StockRepository;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
@@ -15,6 +20,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -28,6 +34,11 @@ import static org.mockito.Mockito.when;
 @ExtendWith(MockitoExtension.class)
 class QuoteRepositoryImplTest {
 
+    private static final UUID STOCK_ID = UUID.randomUUID();
+    private static final UUID STOCK_ID_2 = UUID.randomUUID();
+    private static final String PRICE_100 = "100.00";
+    private static final String PRICE_150 = "150.00";
+
     @Mock private JpaQuoteRepository jpaQuoteRepository;
     @Mock private StockRepository stockRepository;
     @Mock private ServiceOrderExecutionRepository executionRepository;
@@ -36,7 +47,7 @@ class QuoteRepositoryImplTest {
     private QuoteRepositoryImpl repository;
 
     @Nested
-    @DisplayName("save — insert")
+    @DisplayName("create")
     class SaveInsert {
 
         @Test
@@ -71,45 +82,8 @@ class QuoteRepositoryImplTest {
     }
 
     @Nested
-    @DisplayName("save — update")
+    @DisplayName("update")
     class SaveUpdate {
-
-        @Test
-        @DisplayName("Deve atualizar orçamento existente sem violar constraint")
-        void shouldUpdateExistingQuoteWithoutConstraintViolation() {
-            var quoteId = UUID.randomUUID();
-            var serviceOrderId = UUID.randomUUID();
-            var quote = existingQuote(quoteId, serviceOrderId);
-            var existingEntity = validEntity(quoteId, serviceOrderId);
-
-            when(jpaQuoteRepository.findById(quoteId)).thenReturn(Optional.of(existingEntity));
-            when(jpaQuoteRepository.save(any(QuoteEntity.class))).thenReturn(existingEntity);
-
-            var result = repository.save(quote);
-
-            assertThat(result).isNotNull();
-            // verifica que o flush foi chamado para garantir DELETE antes do INSERT
-            verify(jpaQuoteRepository).flush();
-            verify(jpaQuoteRepository).save(existingEntity);
-        }
-
-        @Test
-        @DisplayName("Deve limpar itens antigos antes de adicionar novos")
-        void shouldClearOldItemsBeforeAddingNew() {
-            var quoteId = UUID.randomUUID();
-            var serviceOrderId = UUID.randomUUID();
-            var quote = existingQuote(quoteId, serviceOrderId);
-            var existingEntity = validEntity(quoteId, serviceOrderId);
-
-            when(jpaQuoteRepository.findById(quoteId)).thenReturn(Optional.of(existingEntity));
-            when(jpaQuoteRepository.save(any(QuoteEntity.class))).thenReturn(existingEntity);
-
-            repository.save(quote);
-
-            // após o clear, as listas devem estar vazias (novos itens do quote mockado também são vazios)
-            assertThat(existingEntity.getStockItems()).isEmpty();
-            assertThat(existingEntity.getServiceItems()).isEmpty();
-        }
 
         @Test
         @DisplayName("Deve atualizar campos simples da entity")
@@ -139,6 +113,110 @@ class QuoteRepositoryImplTest {
             assertThatThrownBy(() -> repository.save(quote))
                     .isInstanceOf(IllegalArgumentException.class)
                     .hasMessageContaining(quoteId.toString());
+        }
+
+        @Test
+        @DisplayName("Deve preservar o id do item de estoque inalterado, sem apagar e recriar a linha")
+        void shouldPreserveStockItemIdWhenItemIsUnchanged() {
+            var quoteId = UUID.randomUUID();
+            var serviceOrderId = UUID.randomUUID();
+            var existingItemId = UUID.randomUUID();
+
+            var existingEntity = validEntity(quoteId, serviceOrderId);
+            existingEntity.getStockItems().add(stockItemEntity(existingItemId, STOCK_ID, 1, existingEntity));
+
+            var domainStockItem = QuoteStockItem.reconstruct(existingItemId, validStock(STOCK_ID),
+                    new BigDecimal(PRICE_100), 5, LocalDateTime.now(), LocalDateTime.now());
+            var quote = quoteWithStockItems(quoteId, serviceOrderId, List.of(domainStockItem));
+
+            when(jpaQuoteRepository.findById(quoteId)).thenReturn(Optional.of(existingEntity));
+            when(jpaQuoteRepository.save(any(QuoteEntity.class))).thenReturn(existingEntity);
+            when(stockRepository.findById(STOCK_ID)).thenReturn(Optional.of(validStock(STOCK_ID)));
+
+            repository.save(quote);
+
+            assertThat(existingEntity.getStockItems()).hasSize(1);
+            assertThat(existingEntity.getStockItems().getFirst().getId()).isEqualTo(existingItemId);
+            assertThat(existingEntity.getStockItems().getFirst().getQuantity()).isEqualTo(5);
+        }
+
+        @Test
+        @DisplayName("Deve adicionar um novo item de estoque sem afetar o id do item existente")
+        void shouldAddNewStockItemWithoutAffectingExistingId() {
+            var quoteId = UUID.randomUUID();
+            var serviceOrderId = UUID.randomUUID();
+            var existingItemId = UUID.randomUUID();
+
+            var existingEntity = validEntity(quoteId, serviceOrderId);
+            existingEntity.getStockItems().add(stockItemEntity(existingItemId, STOCK_ID, 1, existingEntity));
+
+            var unchangedItem = QuoteStockItem.reconstruct(existingItemId, validStock(STOCK_ID),
+                    new BigDecimal(PRICE_100), 1, LocalDateTime.now(), LocalDateTime.now());
+            var newItem = QuoteStockItem.create(validStock(STOCK_ID_2), 2);
+            var quote = quoteWithStockItems(quoteId, serviceOrderId, List.of(unchangedItem, newItem));
+
+            when(jpaQuoteRepository.findById(quoteId)).thenReturn(Optional.of(existingEntity));
+            when(jpaQuoteRepository.save(any(QuoteEntity.class))).thenReturn(existingEntity);
+            when(stockRepository.findById(STOCK_ID)).thenReturn(Optional.of(validStock(STOCK_ID)));
+            when(stockRepository.findById(STOCK_ID_2)).thenReturn(Optional.of(validStock(STOCK_ID_2)));
+
+            repository.save(quote);
+
+            assertThat(existingEntity.getStockItems()).hasSize(2);
+            assertThat(existingEntity.getStockItems())
+                    .anyMatch(i -> i.getId().equals(existingItemId));
+        }
+
+        @Test
+        @DisplayName("Deve remover da entity o item de estoque que não está mais no domínio")
+        void shouldRemoveStockItemNoLongerPresentInDomain() {
+            var quoteId = UUID.randomUUID();
+            var serviceOrderId = UUID.randomUUID();
+            var keptItemId = UUID.randomUUID();
+            var removedItemId = UUID.randomUUID();
+
+            var existingEntity = validEntity(quoteId, serviceOrderId);
+            existingEntity.getStockItems().add(stockItemEntity(keptItemId, STOCK_ID, 1, existingEntity));
+            existingEntity.getStockItems().add(stockItemEntity(removedItemId, STOCK_ID_2, 2, existingEntity));
+
+            var keptItem = QuoteStockItem.reconstruct(keptItemId, validStock(STOCK_ID),
+                    new BigDecimal(PRICE_100), 1, LocalDateTime.now(), LocalDateTime.now());
+            var quote = quoteWithStockItems(quoteId, serviceOrderId, List.of(keptItem));
+
+            when(jpaQuoteRepository.findById(quoteId)).thenReturn(Optional.of(existingEntity));
+            when(jpaQuoteRepository.save(any(QuoteEntity.class))).thenReturn(existingEntity);
+            when(stockRepository.findById(STOCK_ID)).thenReturn(Optional.of(validStock(STOCK_ID)));
+
+            repository.save(quote);
+
+            assertThat(existingEntity.getStockItems()).hasSize(1);
+            assertThat(existingEntity.getStockItems().getFirst().getId()).isEqualTo(keptItemId);
+        }
+
+        @Test
+        @DisplayName("Deve preservar o id do item de serviço inalterado")
+        void shouldPreserveServiceItemIdWhenItemIsUnchanged() {
+            var quoteId = UUID.randomUUID();
+            var serviceOrderId = UUID.randomUUID();
+            var existingItemId = UUID.randomUUID();
+            var executionId = UUID.randomUUID();
+
+            var existingEntity = validEntity(quoteId, serviceOrderId);
+            existingEntity.getServiceItems().add(serviceItemEntity(existingItemId, executionId, existingEntity));
+
+            var execution = validExecution(executionId, serviceOrderId);
+            var domainServiceItem = QuoteServiceItem.reconstruct(existingItemId, execution,
+                    new BigDecimal(PRICE_150), LocalDateTime.now(), LocalDateTime.now());
+            var quote = quoteWithServiceItems(quoteId, serviceOrderId, List.of(domainServiceItem));
+
+            when(jpaQuoteRepository.findById(quoteId)).thenReturn(Optional.of(existingEntity));
+            when(jpaQuoteRepository.save(any(QuoteEntity.class))).thenReturn(existingEntity);
+            when(executionRepository.findById(executionId)).thenReturn(Optional.of(execution));
+
+            repository.save(quote);
+
+            assertThat(existingEntity.getServiceItems()).hasSize(1);
+            assertThat(existingEntity.getServiceItems().getFirst().getId()).isEqualTo(existingItemId);
         }
     }
 
@@ -185,7 +263,7 @@ class QuoteRepositoryImplTest {
             var result = repository.findByServiceOrderId(serviceOrderId);
 
             assertThat(result).hasSize(1);
-            assertThat(result.get(0).getServiceOrderId()).isEqualTo(serviceOrderId);
+            assertThat(result.getFirst().getServiceOrderId()).isEqualTo(serviceOrderId);
         }
 
         @Test
@@ -225,13 +303,13 @@ class QuoteRepositoryImplTest {
 
     private Quote newQuote() {
         return Quote.reconstruct(null, UUID.randomUUID(), QuoteStatus.PENDING,
-                new BigDecimal("100.00"), null, List.of(), List.of(),
+                new BigDecimal(PRICE_100), null, List.of(), List.of(),
                 LocalDateTime.now(), LocalDateTime.now());
     }
 
     private Quote existingQuote(UUID id, UUID serviceOrderId) {
         return Quote.reconstruct(id, serviceOrderId, QuoteStatus.PENDING,
-                new BigDecimal("100.00"), null, List.of(), List.of(),
+                new BigDecimal(PRICE_100), null, List.of(), List.of(),
                 LocalDateTime.now(), LocalDateTime.now());
     }
 
@@ -243,14 +321,60 @@ class QuoteRepositoryImplTest {
         return quote;
     }
 
+    private Quote quoteWithStockItems(UUID id, UUID serviceOrderId, List<QuoteStockItem> stockItems) {
+        return Quote.reconstruct(id, serviceOrderId, QuoteStatus.PENDING,
+                new BigDecimal(PRICE_100), null, stockItems, List.of(),
+                LocalDateTime.now(), LocalDateTime.now());
+    }
+
+    private Quote quoteWithServiceItems(UUID id, UUID serviceOrderId, List<QuoteServiceItem> serviceItems) {
+        return Quote.reconstruct(id, serviceOrderId, QuoteStatus.PENDING,
+                new BigDecimal(PRICE_100), null, List.of(), serviceItems,
+                LocalDateTime.now(), LocalDateTime.now());
+    }
+
+    private Stock validStock(UUID stockId) {
+        return Stock.reconstruct(stockId, "Filtro de óleo", "Filtro",
+                10, new BigDecimal(PRICE_100), "Filtros", 2,
+                LocalDateTime.now(), LocalDateTime.now());
+    }
+
+    private ServiceOrderExecution validExecution(UUID id, UUID serviceOrderId) {
+        return ServiceOrderExecution.reconstruct(id, UUID.randomUUID(), serviceOrderId,
+                ServiceOrderExecutionStatus.PENDING, LocalDateTime.now(), LocalDateTime.now(), null, null);
+    }
+
     private QuoteEntity validEntity(UUID id, UUID serviceOrderId) {
         return QuoteEntity.builder()
                 .id(id)
                 .serviceOrderId(serviceOrderId)
                 .status(QuoteStatus.PENDING)
-                .totalPrice(new BigDecimal("100.00"))
-                .stockItems(new java.util.ArrayList<>())
-                .serviceItems(new java.util.ArrayList<>())
+                .totalPrice(new BigDecimal(PRICE_100))
+                .stockItems(new ArrayList<>())
+                .serviceItems(new ArrayList<>())
+                .createdAt(LocalDateTime.now())
+                .updatedAt(LocalDateTime.now())
+                .build();
+    }
+
+    private QuoteStockItemEntity stockItemEntity(UUID id, UUID stockId, int quantity, QuoteEntity quoteEntity) {
+        return QuoteStockItemEntity.builder()
+                .id(id)
+                .quote(quoteEntity)
+                .stockId(stockId)
+                .unitPrice(new BigDecimal(PRICE_100))
+                .quantity(quantity)
+                .createdAt(LocalDateTime.now())
+                .updatedAt(LocalDateTime.now())
+                .build();
+    }
+
+    private QuoteServiceItemEntity serviceItemEntity(UUID id, UUID executionId, QuoteEntity quoteEntity) {
+        return QuoteServiceItemEntity.builder()
+                .id(id)
+                .quote(quoteEntity)
+                .serviceOrderExecutionId(executionId)
+                .price(new BigDecimal(PRICE_150))
                 .createdAt(LocalDateTime.now())
                 .updatedAt(LocalDateTime.now())
                 .build();
